# rdi-dev-env

./: .gitignore  CLAUDE.md  README.md  install.sh  standards.json
.claude/: settings.local.json
.github/workflows/: ci.yml  gemini-code-review.yml
commands/: deploy.md  fix-pr.md  quality.md  review-pr.md  usage.md
docs/: advisory-rollback-bug-2026-03-21.md  branching-strategy.md  current-tasks.md  deploy-pipeline-upgrade-guide.md  roadmap.md  standards-compliance-plan.md  upstream-candidates.md
scripts/: audit-project.sh  context-reseeder.sh  conversation-archiver.sh  new-project.sh  quality-gate.sh  ralph-loop.sh  refresh-project.sh  usage-monitor.sh
scripts/lib/: template-utils.sh
skills/clean-architecture/: SKILL.md
skills/pr-workflow/: SKILL.md
skills/project-setup/: SKILL.md
skills/security-review/: SKILL.md
skills/tdd-workflow/: SKILL.md
templates/: AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md
templates/base/: .gitignore  template.json
templates/github-workflows/: README.md  ci-python.yml  ci.yml  dependabot.yml  deploy-cloudrun-nextjs.yml  deploy-cloudrun.yml  deploy-firestore.yml  deploy-production.yml  deploy-staging.yml  gemini-code-review.yml  gemini-on-demand.yml  security.yml  (+2 more)
templates/python/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  template.json
templates/python-fastmcp/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  pyproject.toml  tasks.json  template.json
templates/python-fastmcp/fragments/: agents-architecture.md  agents-commands.md  agents-env-vars.md  agents-file-structure.md  agents-tech-stack.md  claude-commands.md  claude-resources.md  claude-session-startup.md  gemini-architectural-constraints.md  gemini-common-violations.md  gemini-quality-standards.md  gemini-testing-standards.md
templates/python-fastmcp/scaffold/: .env.development  __main__.py  config.py  coordinator.py  server.py
templates/python-fastmcp/scaffold/docs/: current-tasks.md
templates/python-fastmcp/scaffold/tests/: conftest.py  test_coordinator.py
templates/python/fragments/: agents-commands.md  agents-env-vars.md  agents-file-structure.md  agents-tech-stack.md  claude-commands.md  claude-resources.md  gemini-quality-standards.md  gemini-testing-standards.md
templates/python/workflows/: dependabot.yml  deps-python.yml  lint-python.yml  security-python.yml  test-python.yml  typecheck-python.yml
tmux/: tmux-dev.sh  tmux.conf
(+92 files in other folders)
