[project]
name = "<!-- CUSTOMIZE: project-name -->"
version = "0.1.0"
description = "<!-- CUSTOMIZE: description -->"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "starlette>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
# CUSTOMIZE: entry-point-name = "package_name.server:main"
<!-- CUSTOMIZE: project-name --> = "<!-- CUSTOMIZE: package_name -->.server:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: tests against a deployed server (skipped when SMOKE_TEST_URL unset)",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["<!-- CUSTOMIZE: package_name -->*"]
